--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -632,7 +632,7 @@ After the back-end has been implemented we can build and copy the compiled **Cha
 
 ### Simplified Web App Deployments
 
-Not having to build projects also greatly simplifies deployments as it just becomes an exercise of deploying your Web App's static files, `web.settings` and the pre-compiled [Web App binary](https://github.com/NetCoreWebApps/WebApp). We're maintaining step-by-step guides for the most popular deployment methods in [templates.servicestack.net/docs/deploying-web-apps](http://templates.servicestack.net/docs/deploying-web-apps) which we'll continue adding to in future. 
+Not having to build projects also greatly simplifies deployments as it just becomes an exercise of deploying your Web App's static files, `web.settings` and the pre-compiled [Web App binary](https://github.com/NetCoreWebApps/Web). We're maintaining step-by-step guides for the most popular deployment methods in [templates.servicestack.net/docs/deploying-web-apps](http://templates.servicestack.net/docs/deploying-web-apps) which we'll continue adding to in future. 
 
 To give you an idea of how easy deployments are, after a [one-time setup of supervisor and nginx configuration for each App](http://templates.servicestack.net/docs/deploying-web-apps#setup-supervisor) we deploy all Web Apps above (excl AWS and Azure Cloud Apps which are deployed to AWS/Azure using Docker) in seconds by running [this script](https://github.com/NetCoreWebApps/WebApp/blob/master/src/WebApp/run.deploy.apps.sh) below:
 
