--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -110,7 +110,7 @@ Within this minimal syntax we've been able to achieve a highly versatile dynamic
 Even in this initial release we're extremely pleased with its current form, we've spent less time developing Templates than we have on ServiceStack's Razor Integration and we've already innovated past what we've been capable to do with Razor. It's not coupled to any external tooling or susceptible to any of the external factors that has plagued us with Razor. It's highly testable by design with unit tests being trivial to write that it's our most tested feature with over 350 new tests added to support its current feature-set, it's also our [most documented feature](http://templates.servicestack.net). 
 
 It's small, lightweight footprint and built-in [Hot Reloading](http://templates.servicestack.net/docs/hot-reloading) provides a fun, clean and productuve alternative to MVC Razor that's easily 
-[integrated into any web framework](http://templates.servicestack.net/docs/view-engine) and runs identically in [every platform ServiceStack runs on](http://templates.servicestack.net/docs/view-engine#runs-everywhere), it can also be returned in [ASP.NET MVC](http://templates.servicestack.net/docs/mvc-aspnet) and [ASP.NET MVC Core](http://templates.servicestack.net/docs/mvc-netcore) Controllers - in all cases, using the same [high-performance implementation](http://templates.servicestack.net/docs/introduction#instant-startup) to asynchronously write to a forward-only OutputStream for max performance and maximum potential reuse of your Code.
+[integrated into any web framework](http://templates.servicestack.net/docs/view-engine) and runs identically in [every platform ServiceStack runs on](http://templates.servicestack.net/docs/view-engine#runs-everywhere), it can also be returned in [ASP.NET MVC](http://templates.servicestack.net/docs/mvc-aspnet) and [ASP.NET MVC Core](http://templates.servicestack.net/docs/mvc-netcore) Controllers - in all cases, using the same [high-performance implementation](http://templates.servicestack.net/docs/introduction#instant-startup) to asynchronously write to a forward-only OutputStream for max performance and maximum potential reuse of your code.
 
 Templates are lazily loaded and [late-bound](http://templates.servicestack.net/docs/introduction#late-bound) for Instant Startup, doesn't require any pre-compilation, have coupling to any external configuration files, build tools, designer tooling or have any special deployment requirements. It can be used as a general purpose templating language to enhance [any text format](http://templates.servicestack.net/docs/page-formats) and includes built-in support for `.html`.
 
@@ -188,8 +188,8 @@ title: About Us
 -->
 ```
 
-Template's syntax is also the ideal way to convey variable substitution, e.g: `<title>{{ title }}</title>`
-and even embedding a partial reads like english `{{ 'menu' | partial }}` which is both intuitive and works well with GUI HTML designers.
+Template's syntax is also the ideal way to convey variable substitution, e.g: `{% raw %}<title>{{ title }}</title>{% endraw %}`
+and even embedding a partial reads like english `{% raw %}{{ 'menu' | partial }}{% endraw %}` which is both intuitive and works well with GUI HTML designers.
 
 #### [web.settings](https://github.com/NetCoreWebApps/WebAppStarter/blob/master/app/web.settings)
 
@@ -690,7 +690,7 @@ Plugins.Add(new TemplatePagesFeature {
 ```
 
 This registers the Service but limits it to Users with the `Admin` role, alternatively you configure an 
-[Admin Secret Key](http://docs.servicestack.net/debugging#authsecret):
+[Admin Secret](http://docs.servicestack.net/debugging#authsecret):
 
 ```csharp
 SetConfig(new HostConfig { AdminAuthSecret = "secret" })
@@ -712,7 +712,7 @@ Which is the configuration that allows [templates.servicestack.net/metadata/debu
 
 The development of Templates also brought with it the development of a number of high-performance utilities that are useful for use on their own. The ServiceStack.Text JSON Serializer was only designed for serializing Typed POCOs, you can still use it to [deserialize dynamic JSON](https://github.com/ServiceStack/ServiceStack.Text#supports-dynamic-json) but you would need to specify the Type to deserialize into on the call-site otherwise the value would be returned as a string.
 
-Templates implementation of JavaScript preserves the Type which can be used to parse JavaScript or JSON literals, e.g:
+Templates implementation of JavaScript preserves the Type which can be used to parse JavaScript or JSON literals:
 
 ```csharp
 JSON.parse("1")      //= int 1 
@@ -741,8 +741,8 @@ JS.eval("arg", scope)                                        //= "value"
 JS.eval("reverse(arg)", scope)                               //= "eulav"
 JS.eval("itemsOf(3, padRight(reverse(arg), 8, '_'))", scope) //= ["eulav___", "eulav___", "eulav___"]
 
-JS.eval("{a: itemsOf(3, padRight(reverse(arg), 8, '_')) }", scope)
 //= { a: ["eulav___", "eulav___", "eulav___"] }
+JS.eval("{a: itemsOf(3, padRight(reverse(arg), 8, '_')) }", scope)
 ```
 
 ## Simple Container
