markdown doesnt need encoding

--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -220,7 +220,7 @@ We've had a sordid history developing Redis UI's which we're built using the pop
 #### Beautiful, succinct, declarative code
 
 The nice thing about generating HTML is that it's the one true constant in Web development that will always be there. The entire functionality for the Redis Web App is contained in a single [/redis/index.html](https://github.com/NetCoreWebApps/Redis/blob/master/app/index.html) which includes
-all Template and JavaScript Source Code in <b>&lt; 200 lines</b> which also includes all as server logic as it doesn't rely on any back-end Services and just uses the [Redis Filters](http://templates.servicestack.net/docs/redis-filters) to interface with Redis directly.
+all Template and JavaScript Source Code in **< 200 lines** which also includes all as server logic as it doesn't rely on any back-end Services and just uses the [Redis Filters](http://templates.servicestack.net/docs/redis-filters) to interface with Redis directly.
 The [source code](https://github.com/NetCoreWebApps/Redis/blob/master/app/index.html) also serves as a good demonstration of the declarative coding style that Templates encourages that in addition to being highly-readable requires orders of magnitude less code than our previous Redis JavaScript SPA's with a comparable feature-set.
 
 Having a much smaller code-base makes it much easier to maintain and enhance whilst being less susceptible to becoming obsolete by the next new JavaScript framework as it would only require rewriting 75 lines of JavaScript instead of the complete rewrite that would be required to convert the existing JavaScript Apps to a use different JavaScript fx.
@@ -532,14 +532,14 @@ public class CustomPlugin : IPlugin
         if (ShowDrivesLinks)
         {
             var diskFormat = Env.IsWindows ? "NTFS" : "ext2";
-            appHost.GetPlugin&lt;MetadataFeature&gt;()
+            appHost.GetPlugin<MetadataFeature>()
                 .AddPluginLink("/drives", "All Disks")
                 .AddPluginLink($"/drives?DriveFormatIn={diskFormat}", $"{diskFormat} Disks");
         }
 
         if (ShowProcessLinks)
         {
-            appHost.GetPlugin&lt;MetadataFeature&gt;()
+            appHost.GetPlugin<MetadataFeature>()
                 .AddPluginLink("/processes", "All Processes")
                 .AddPluginLink("/process/current", "Current Process");
         }
@@ -610,7 +610,7 @@ public class AppHost : AppHostBase
                 new GithubAuthProvider(AppSettings),    //Sign-in with GitHub
             }));
 
-        container.RegisterAutoWiredAs&lt;MemoryChatHistory, IChatHistory&gt;();
+        container.RegisterAutoWiredAs<MemoryChatHistory, IChatHistory>();
 
         Plugins.Add(new CorsFeature(
             allowOriginWhitelist: new[] { "http://localhost", "http://null.jsbin.com" },
