--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -280,7 +280,7 @@ Contains all the code needed to generate the following API endpoints:
 
 <table class="table table-striped api-table">
     <tr class="bg-success">
-        <td colspan="2" style="text-align:center;font-size:1.8rem">/customers API</td>
+        <td colspan="2" style="text-align:center;color:#fff;">/customers API</td>
     </tr>
     <tr>
         <th>All Customers</th>
