--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -661,7 +661,7 @@ If you're not running a Linux or OSX Desktop OS, this script can be run using [W
 
 Templates supports a very limited subset of JavaScript, namely all primitive data types, calling functions, bindings and the `-` and `!` unary operators. This current limitation is similar to LISP where named functions are used instead of operators. We're still undecided on whether to add support for more JavaScript operators as we'd prefer to have as minimal non-overridable behavior as possible and currently filters define all functionality in Templates.
 
-Currently you'll need to use [named Math functions](http://templates.servicestack.net/docs/sandbox) to perform arithmetic operations, likewise for [boolean logic](http://templates.servicestack.net/docs/default-filters#conditional-tests) or [Boolean Expressions](http://templates.servicestack.net/docs/syntax#boolean-expressions) for filters that support it.
+Currently you'll need to use [named Math functions](http://templates.servicestack.net/docs/default-filters#arithmetic) to perform arithmetic operations, likewise for [boolean logic](http://templates.servicestack.net/docs/default-filters#conditional-tests) or [Boolean Expressions](http://templates.servicestack.net/docs/syntax#boolean-expressions) for filters that support it.
 
 ### Current Status
 
