Update redis-html links

--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -206,26 +206,26 @@ webRoot ~/../app
 > `debug true` controls the level of internal diagnostics available and whether or not [Hot Reloading](http://templates.servicestack.net/docs/hot-reloading) is enabled. 
 
 ### Redis Web App
-> source [/Redis](https://github.com/NetCoreWebApps/Redis) - demo [redis.web-app.io](http://redis.web-app.io)
+> source [/RedisHtml](https://github.com/NetCoreWebApps/RedisHtml) - demo [redis.web-app.io](http://redis-html.web-app.io)
 
 For the Redis Browser Web App, we wanted to implement an App that was an ideal candidate for a Single Page App but constrain ourselves to do all HTML rendering on the server and have each interaction request a full-page reload to see how a traditional server-generated Web App feels like with the performance of .NET Core 2.0 and Templates. We're pleasantly surprised with the result as when the App is run locally the responsiveness is effectively indistinguishable from an Ajax App. When hosted on the Internet there is a sub-second delay which causes a noticeable flicker but it still retains a pleasant UX that's faster than most websites.
 
 The benefits of a traditional website is that it doesn't break the web where the back button and deep linking work without effort and you get to avoid the complexity train of adopting a premier JavaScript SPA Framework's configuration, dependencies, workflow and build system which has become overkill for small projects.
 
-[![](http://templates.servicestack.net/assets/img/screenshots/redis.png)](http://redis.web-app.io)
+[![](http://templates.servicestack.net/assets/img/screenshots/redis-html.png)](http://redis-html.web-app.io)
 
 We've had a sordid history developing Redis UI's which we're built using the popular JavaScript frameworks that appeared dominant at the time but have since seen their ecosystem decline, starting with the
 [Redis Admin UI](http://redisadminui.servicestack.net) built using [Google's Closure Library](https://github.com/google/closure-library) that as it works different to everything else needed a complete rewrite when creating [redisreact.servicestack.net](http://redisreact.servicestack.net) using the hot new React framework, unfortunately it uses React's old deprecated ES5 syntax and Reflux which is sufficiently different from our current recommended [TypeScript + React + Redux + WebPack](http://docs.servicestack.net/templates-single-page-apps) JavaScript SPA Stack, that is going to require a significant refactor to adopt our preferred SPA tech stack.
 
 #### Beautiful, succinct, declarative code
 
-The nice thing about generating HTML is that it's the one true constant in Web development that will always be there. The entire functionality for the Redis Web App is contained in a single [/redis/index.html](https://github.com/NetCoreWebApps/Redis/blob/master/app/index.html) which includes
+The nice thing about generating HTML is that it's the one true constant in Web development that will always be there. The entire functionality for the Redis Web App is contained in a single [/RedisHtml/index.html](https://github.com/NetCoreWebApps/RedisHtml/blob/master/app/index.html) which includes
 all Template and JavaScript Source Code in **< 200 lines** which also includes all as server logic as it doesn't rely on any back-end Services and just uses the [Redis Filters](http://templates.servicestack.net/docs/redis-filters) to interface with Redis directly.
-The [source code](https://github.com/NetCoreWebApps/Redis/blob/master/app/index.html) also serves as a good demonstration of the declarative coding style that Templates encourages that in addition to being highly-readable requires orders of magnitude less code than our previous Redis JavaScript SPA's with a comparable feature-set.
+The [source code](https://github.com/NetCoreWebApps/RedisHtml/blob/master/app/index.html) also serves as a good demonstration of the declarative coding style that Templates encourages that in addition to being highly-readable requires orders of magnitude less code than our previous Redis JavaScript SPA's with a comparable feature-set.
 
 Having a much smaller code-base makes it much easier to maintain and enhance whilst being less susceptible to becoming obsolete by the next new JavaScript framework as it would only require rewriting 75 lines of JavaScript instead of the complete rewrite that would be required to convert the existing JavaScript Apps to a use different JavaScript fx.
 
-#### [web.settings](https://github.com/NetCoreWebApps/Redis/blob/master/app/web.settings)
+#### [web.settings](https://github.com/NetCoreWebApps/RedisHtml/blob/master/app/web.settings)
 
 The `web.settings` for Redis is similar to Web App Starter above except it adds a `redis.connection`
 to configure a [RedisManagerPool](https://github.com/ServiceStack/ServiceStack.Redis#redismanagerpool) at the [connection string](https://github.com/ServiceStack/ServiceStack.Redis#redis-connection-strings) provided as well as [Redis Filters](http://templates.servicestack.net/docs/redis-filters) to give Templates access to the Redis instance.
