--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -206,7 +206,7 @@ webRoot ~/../app
 > `debug true` controls the level of internal diagnostics available and whether or not [Hot Reloading](http://templates.servicestack.net/docs/hot-reloading) is enabled. 
 
 ### Redis Web App
-> source [/RedisHtml](https://github.com/NetCoreWebApps/RedisHtml) - demo [redis.web-app.io](http://redis-html.web-app.io)
+> source [/RedisHtml](https://github.com/NetCoreWebApps/RedisHtml) - demo [redis-html.web-app.io](http://redis-html.web-app.io)
 
 For the Redis Browser Web App, we wanted to implement an App that was an ideal candidate for a Single Page App but constrain ourselves to do all HTML rendering on the server and have each interaction request a full-page reload to see how a traditional server-generated Web App feels like with the performance of .NET Core 2.0 and Templates. We're pleasantly surprised with the result as when the App is run locally the responsiveness is effectively indistinguishable from an Ajax App. When hosted on the Internet there is a sub-second delay which causes a noticeable flicker but it still retains a pleasant UX that's faster than most websites.
 
