update refs to use new npm scoped servicestack packages

--- a/docs/_releases/v4.0.62.md
+++ b/docs/_releases/v4.0.62.md
@@ -297,7 +297,7 @@ once it leaves beta.
 We've added even deeper integration with TypeScript in this release which has graduated to a 1st class supported
 [Add ServiceStack Reference](/add-servicestack-reference)
 language that together with the new TypeScript `JsonServiceClient` available in the 
-[servicestack-client npm package](https://www.npmjs.com/package/servicestack-client) enables the same 
+[@servicestack/client npm package](https://www.npmjs.com/package/@servicestack/client) enables the same 
 productive, typed API development experience available in our other 1st-class supported client platforms. 
 
 The additional type hints ServiceStack embeds in each Request DTO lets us achieve the ideal typed, 
@@ -306,11 +306,11 @@ succinct, boilerplate-free Typed API.
 
 Here's a quick look at what it looks like. The example below shows how to create a C# Gist in Gislyn 
 after adding a [TypeScript ServiceStack Reference](/add-servicestack-reference)
-to `gistlyn.com` and installing the [servicestack-client](https://www.npmjs.com/package/servicestack-client) 
+to `gistlyn.com` and installing the [@servicestack/client](https://www.npmjs.com/package/@servicestack/client) 
 npm package: 
 
 ```ts
-import { JsonServiceClient } from 'servicesack-client';
+import { JsonServiceClient } from '@servicestack/client';
 import { StoreGist, GithubFile } from './Gistlyn.dtos';
 
 var client = new JsonServiceClient("http://gistlyn.com");
@@ -367,9 +367,9 @@ const sse = new ServerEventsClient("/", channels, {
 });
 ```
 
-### TypeScript [servicestack-client](https://www.npmjs.com/package/servicestack-client)
+### TypeScript [@servicestack/client](https://www.npmjs.com/package/@servicestack/client)
 
-We've upgraded all ServiceStackVS TypeScript projects to use the pure `servicestack-client` client and 
+We've upgraded all ServiceStackVS TypeScript projects to use the pure `@servicestack/client` client and 
 switched over to use the lighter and jQuery-free [bootstrap.native](https://github.com/thednp/bootstrap.native) 
 CSS framework which is more suitable for use in modern React, AngularJS and Aurelia frameworks. 
 
@@ -379,7 +379,7 @@ Other TypeScript or ES6 projects can install `servicestack-client` with:
 
 node server projects can instead install it with:
 
-    npm install servicestack-client --save
+    npm install @servicestack/client
 
 Then fetch the Type Definitions for either project type with:
 
@@ -544,7 +544,7 @@ will remain accessible in the `net40` branches of all major ServiceStack Github 
 
 To coincide with the [v1.0 release of Aurelia](http://blog.durandal.io/2016/07/27/aurelia-1-0-is-here/)
 the Aurelia VS.NET template has been updated to v1.0 using **bootstrap.native** and is now pre-configured 
-with both the new `servicestack-client` and local `src/dtos.ts` TypeScript Reference that includes an 
+with both the new `@servicestack/client` and local `src/dtos.ts` TypeScript Reference that includes an 
 end-to-end Typed DTO example showing them used together:
 
 ```ts
