--- a/docs/_releases/v4.5.10.md
+++ b/docs/_releases/v4.5.10.md
@@ -59,7 +59,7 @@ entry: {
         'react',
         'react-dom',
         'react-router-dom',
-        'servicestack-client'
+        '@servicestack/client'
     ]
 },
 ```
@@ -376,7 +376,7 @@ Whilst CSS is a powerful language for styling Web Apps it lacks many of the DRY 
  
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/ssvs/servicestack-ts.png)
  
-ServiceStack is seamlessly [integrated with TypeScript](/typescript-add-servicestack-reference) where all templates are pre-configured to use the Server's TypeScript DTOs and [servicestack-client](https://github.com/ServiceStack/servicestack-client) generic `JsonServiceClient` to make the [Typed API request below](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp/ReactApp/src/home/Hello.tsx) which displays a Welcome message on each key-press:
+ServiceStack is seamlessly [integrated with TypeScript](/typescript-add-servicestack-reference) where all templates are pre-configured to use the Server's TypeScript DTOs and [@servicestack/client](https://github.com/ServiceStack/servicestack-client) generic `JsonServiceClient` to make the [Typed API request below](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp/ReactApp/src/home/Hello.tsx) which displays a Welcome message on each key-press:
  
 ```ts
 import { client } from '../shared';
@@ -599,19 +599,19 @@ To make it more wrist-friendly you can also use the shorter `ts-ref` alias inste
  
 ### Installing Generic Service Client
  
-Now we have our TechStacks Server DTOs we can use them with the generic `JsonServiceClient` in the [servicestack-client](https://www.npmjs.com/package/servicestack-client) npm package to make Typed API Calls.
+Now we have our TechStacks Server DTOs we can use them with the generic `JsonServiceClient` in the [@servicestack/client](https://www.npmjs.com/package/@servicestack/client) npm package to make Typed API Calls.
  
-#### Install servicestack-client
+#### Install @servicestack/client
  
-    $ npm install --save servicestack-client
+    $ npm install @servicestack/client
  
 #### TechStacks Example
  
-Once installed create a `demo.ts` file with the example below using both the `JsonServiceClient` from the **servicestack-client** npm package and the Server DTOs we 
+Once installed create a `demo.ts` file with the example below using both the `JsonServiceClient` from the **@servicestack/client** npm package and the Server DTOs we 
 want to use from our local `techstacks.dtos.ts` above:
  
 ```ts
-import { JsonServiceClient } from 'servicestack-client';
+import { JsonServiceClient } from '@servicestack/client';
 import { GetTechnology, GetTechnologyResponse } from './techstacks.dtos';
  
 var client = new JsonServiceClient("http://techstacks.io")
@@ -655,7 +655,7 @@ To make API requests using TypeScript's async/await feature we'll need to create
 Now we can create a new `await-demo.ts` file and start using TypeScript's async/await feature which as it can only be called within an `async` function, we'll need to wrap in an async function:
  
 ```ts
-import { JsonServiceClient } from 'servicestack-client';
+import { JsonServiceClient } from '@servicestack/client';
 import { GetTechnology, GetTechnologyResponse } from './techstacks.dtos';
  
 var client = new JsonServiceClient("http://techstacks.io")
