--- a/docs/_releases/v4.5.8.md
+++ b/docs/_releases/v4.5.8.md
@@ -633,12 +633,12 @@ Type names, e.g: `ServerEventMessage`, `ServerEventConnect`, `ServerEventJoin`, 
 
 ## [Web, Node.js and React Native ServerEvents Apps](https://github.com/ServiceStackApps/typescript-server-events)
 
-The TypeScript [servicestack-client](https://github.com/ServiceStack/servicestack-client) npm package is a 
+The TypeScript [@servicestack/client](https://github.com/ServiceStack/servicestack-client) npm package is a 
 cross-platform library enabling a rich, productive end-to-end Typed development experience on Web, node.js Server 
 projects, node.js test suites, React Native iOS and Android Mobile Apps - written in either TypeScript or 
 plain JavaScript.
 
-To help getting started using [servicestack-client](https://github.com/ServiceStack/servicestack-client) in each of 
+To help getting started using [@servicestack/client](https://github.com/ServiceStack/servicestack-client) in each of 
 JavaScript's most popular platforms we've developed a simple Server Events Web, Node.js and React Native Mobile iOS App
 that can connect to any Server Events Server and listen to messages published on the subscribed channel. The App also 
 maintains a live synchronized list of Users in the channel that's automatically updated whenever Users join or leave 
@@ -647,7 +647,7 @@ the channel:
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/livedemos/typescript-serverevents/typescript-server-events-banner.png)](https://github.com/ServiceStackApps/typescript-server-events)
 
 Each App uses the optimal starting configuration that enables a productive workflow on each platform and uses the minimum
-runtime dependencies - essentially just [servicestack-client](https://github.com/ServiceStack/servicestack-client) 
+runtime dependencies - essentially just [@servicestack/client](https://github.com/ServiceStack/servicestack-client) 
 and its es6-shim and W3C `EventSource` polyfills on Node.js and React Native where it's missing a native implementation.
 
 ### Web App
@@ -693,7 +693,7 @@ pre-configured with Babel so you can take advantage of
 
 For the React Native App we've decided to stick with React Native default of using ES6/JavaScript instead of 
 TypeScript to showcase that we'll still able to enjoy the same simplified programming model and concrete Types that 
-[servicestack-client](https://github.com/ServiceStack/servicestack-client) enables, in pure JavaScript Apps.
+[@servicestack/client](https://github.com/ServiceStack/servicestack-client) enables, in pure JavaScript Apps.
 
 #### React Native Structure
 
@@ -723,7 +723,7 @@ Now the Server APIs can be consumed as normal by populating a Request DTO and se
 `JsonServiceClient`:
 
 ```js
-import { ServerEventsClient } from 'servicestack-client';
+import { ServerEventsClient } from '@servicestack/client';
 import { PostChatToChannel } from './dtos';
 
 sendChat = () => {
@@ -753,7 +753,7 @@ that's used at runtime.
 
 ### Consuming ServiceStack Services in TypeScript or JavaScript projects
 
-For more info developing Apps using **servicestack-client** see the complete source code and detailed walkthrough in the
+For more info developing Apps using **@servicestack/client** see the complete source code and detailed walkthrough in the
 [typescript-server-events](https://github.com/ServiceStackApps/typescript-server-events) project.
 
 ## C# Server Events Client
@@ -822,9 +822,9 @@ public class MyGlobalReceiver : ServerEventReceiver
 }
 ```
 
-## TypeScript servicestack-client improvements
+## TypeScript @servicestack/client improvements
 
-New APIs have been added to TypeScript's [servicestack-client](https://github.com/ServiceStack/servicestack-client) 
+New APIs have been added to TypeScript's [@servicestack/client](https://github.com/ServiceStack/servicestack-client) 
 to catch up with the additional flexibility and features available in [C#/.NET Service Clients](/csharp-client):
 
 ### Sending additional arguments with Typed API Requests
@@ -864,7 +864,7 @@ generate either TypeScript Concrete Types or Ambient Interface Definitions for y
 - [/types/typescript.d](http://techstacks.io/types/typescript.d) - Server Ambient Interface Definitions
 
 These were previously both generated to enable an optimal end-to-end Typed API for use in the TypeScript 
-**servicestack-client** which needs to embed metadata in Request DTOs to retain necessary type information that 
+**@servicestack/client** which needs to embed metadata in Request DTOs to retain necessary type information that 
 remains preserved after minification.
 
 However a number of Customers have indicated they wish to continue using their preferred HTTP Client of choice 
