change v5 slug since doesn't resolve

--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -1,6 +1,6 @@
 ---
 title: v5 Release Notes
-slug: v5
+slug: v5-0-0
 ---
 
 The theme of this major v5 release is integration and unification with the newly released .NET Standard 2.0 which offers the broadest compatibility and stabilized API surface for .NET Core and the version we've chosen to standardize around.
