--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -303,8 +303,8 @@ The only .NET Core 2.0 project template not to have a .NET Framework equivalent 
 <tr>
     <td><a href="https://github.com/NetCoreTemplates/templates-webapp">templates-webapp</a></td>
     <td align="center">
-        <p><a href="http://templates-webapp.web-templates.io">templates-webapp.web-templates.io</a></p>
         <a href="http://templates-webapp.web-templates.io"><img src="https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/templates-webapp.png" width="500" /></a>
+        <p><a href="http://templates-webapp.web-templates.io">templates-webapp.web-templates.io</a></p>
     </td>
 </tr>
 </table>
@@ -323,8 +323,8 @@ Likewise there are 2 .NET Framework Templates without .NET Core 2.0 equivalents 
 <tr>
     <td><a href="https://github.com/NetFrameworkTemplates/react-desktop-apps-netfx">react-desktop-apps-netfx</a></td>
     <td align="center">
-        <p><a href="http://react-desktop-apps-netfx.web-templates.io">react-desktop-apps-netfx.web-templates.io</a></p>
         <a href="http://react-desktop-apps-netfx.web-templates.io"><img src="https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/react-desktop-apps-netfx.png" width="500" /></a>
+        <p><a href="http://react-desktop-apps-netfx.web-templates.io">react-desktop-apps-netfx.web-templates.io</a></p>
     </td>
 </tr>
 </table>
@@ -766,7 +766,7 @@ The new [ILogWithException](https://github.com/ServiceStack/ServiceStack/blob/ma
 
 ## V5 Changes and Migration Notes
 
-Most ServiceStack releases are in-place upgrades containing new features and enhancements with very minimal disruption to existing code-bases. Our major versions are very few and far between which we use to implement any structural changes that we're held off due to requiring external project or server configuration changes, e.g. the last v4.5.0 major version was for upgrading all packages from .NET v4.0 to .NET v4.5.
+Most ServiceStack releases are in-place upgrades containing new features and enhancements with very minimal disruption to existing code-bases. Our major versions are very few and far between which we use to implement any structural changes that were held off due to requiring external project or server configuration changes, e.g. the last v4.5.0 major version was for upgrading all packages from .NET v4.0 to .NET v4.5.
 
 The theme for ServiceStack v5 was to restructure the code-base to lay the groundwork for parallel first-class support for .NET Core. Whilst some .NET Framework only implementations have moved to different projects there should still be minimal user-facing source code changes other than most deprecated APIs and dead-code having been removed, as such the primary task before upgrading to V5 will be to **move off deprecated APIs**. Most `[Obsolete]` APIs specify which APIs to move to in their deprecated messages which you can find in your build warning messages.
 
@@ -970,7 +970,7 @@ The Async implementation of the `HttpWebRequest` based Service Clients was rewri
 
 ### .NET Reflection APIs
 
-One of the primary areas where .NET Standard and .NET Framework source code differed was in Reflection APIs. To work around this we abstracted them behind wrapper extension methods for most popular Reflection APIs. These wrappers have now all been deprecated as they're no longer needed now that .NET Standard 2.0 has added back support of .NET's standard Reflection APIs. 
+One of the primary areas where .NET Standard and .NET Framework source code differed was in Reflection APIs. To work around this we abstracted them behind wrapper extension methods for the most popular Reflection APIs. These wrappers have now all been deprecated as they're no longer needed now that .NET Standard 2.0 added back support of .NET's standard Reflection APIs. 
 
 ### Minor Features
 
