--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -84,7 +84,7 @@ this.http.get<HelloResponse>(createUrl('/hello/{Name}', { name })).subscribe(r =
 });
 ```
 
-All Single Page App Templates are available for .NET Core 2.0 and ASP.NET Framework projects which you can live preview and create using the template names below:
+All Single Page App Templates are available for both .NET Core 2.0 and ASP.NET Framework projects which can be live-previewed and used to create new projects using the template names below:
 
 <table>
 <tr>
@@ -145,7 +145,7 @@ The Webpack templates have been updated to utilize [Webpack's DllPlugin](https:/
  
     $ npm run dev
 
-Which will watch and re-compile your App for any changes. These new templates also include a new hot-reload feature which works similar to ServiceStack Templates hot-reloading where in **DebugMode** it will long poll the server to watch for any modified files in `/wwwroot` and automatically refresh the page. This provides a hot-reload alternative to `npm run dev-server` to run a Webpack Dev Server proxy on port http://localhost:3000 
+Which will watch and re-compile your App for any changes. These new templates also include a new hot-reload feature which works similar to [ServiceStack Templates hot-reloading](http://templates.servicestack.net/docs/hot-reloading) where in **DebugMode** it will long poll the server to watch for any modified files in `/wwwroot` and automatically refresh the page. This provides a hot-reload alternative to `npm run dev-server` to run a Webpack Dev Server proxy on port http://localhost:3000 
 
 ### Configured with ServiceStack Templates
  
@@ -585,7 +585,7 @@ The following `JwtAuthProvider` properties can be overridden by `IRuntimeAppSett
 
 The JWT `BearerToken` and `RefreshToken` properties added to `RegisterResponse` are now populated on Registrations configured to `AutoLogin=true`.
 
-Previously users could update their info after they've registered using the same built-in `/register` Service used at registration. This feature now disabled by default as it's not an expected capability to have for a Registration Service, if needed it can be re-enabled with:
+Previously users could update their info after they've registered using the same built-in `/register` Service used at registration. This feature is now disabled by default as it's not an expected capability for a Registration Service, if needed it can be re-enabled with:
 
 ```csharp
 ServiceStack.Auth.RegisterService.AllowUpdates = true;
@@ -593,7 +593,7 @@ ServiceStack.Auth.RegisterService.AllowUpdates = true;
 
 ### Routes with Custom Rules
 
-The new `Matches` property on `[Route]` and `[FallbackRoute]` attributes lets you specify an additional custom Rule that requests need to match. We use this feature in all SPA projects to specify that the `[FallbackRoute]` should only return the SPA `index.html` for unmatched requests which explicitly accepts HTML, i.e:
+The new `Matches` property on `[Route]` and `[FallbackRoute]` attributes lets you specify an additional custom Rule that requests need to match. This feature is used in all SPA projects to specify that the `[FallbackRoute]` should only return the SPA `index.html` for unmatched requests which explicitly requests HTML, i.e:
 
 ```csharp
 [FallbackRoute("/{PathInfo*}", Matches="AcceptsHtml")]
@@ -715,7 +715,7 @@ public class CustomFeedView { ... }
 
 [ServiceStack Templates](http://templates.servicestack.net) gains support for the last missing feature from ServiceStack.Razor with its new **View Pages** support which lets you use `.html` Template Pages to render the HTML for Services Responses. 
 
-It works similarly to Razor ViewPages where it uses first matching View Page where the Response DTO is injected as the `Model` property. The View Pages can be in any folder within the `/Views` folder using the format `{PageName}.html` where `PageName` can be either the **Request DTO** or **Response DTO** Name but all page names within the `/Views` folder need to be unique.
+It works similarly to Razor ViewPages where it uses first matching View Page with the Response DTO is injected as the `Model` property. The View Pages can be in any folder within the `/Views` folder using the format `{PageName}.html` where `PageName` can be either the **Request DTO** or **Response DTO** Name, but all page names within the `/Views` folder need to be unique.
 
 Just like ServiceStack.Razor you can also specify to use different Views or Layouts by returning a custom `HttpResult`, e.g:
 
@@ -786,7 +786,7 @@ Migration notes:
  - If you're using an outdated NuGet v2 client you'll need to upgrade to NuGet v3
  - If you were using `.Core` or `.Signed` NuGet packages you'll need to strip the suffixes to use the main NuGet packages 
 
-If you're using the new MSBuild project format, using a `5.*` wildcard version will allow you to upgrade to the latest release of ServiceStack with a NuGet restore.
+If using the new MSBuild project format, using a `5.*` wildcard version enables upgrading to the latest release of ServiceStack with a NuGet restore.
 
 ### Strong Naming Notes
 
@@ -867,6 +867,12 @@ The new `MarkdownConfig` API lets you specify which Markdown implementation to u
 MarkdownConfig.Transformer = new MarkdownDeep.Markdown();
 ```
 
+Providing a static API that can be used to transform Markdown to HTML with:
+
+```csharp
+var markdown = MarkdownConfig.Transform(html);
+```
+
 Alternative Markdown implementations can be used by providing an adapter for the `IMarkdownTransformer` interface:
 
 ```csharp
@@ -933,7 +939,7 @@ Plugins.Add(new ValidationFeature {
 
 ### Expanded Async Support
 
-To pre-emptively support .NET Core when they [disable Sync Response writes by default](https://github.com/aspnet/Announcements/issues/252) in future version, we've rewritten our internal implementations to write to Responses asynchronously. 
+To pre-emptively support .NET Core when they [disable Sync Response writes by default](https://github.com/aspnet/Announcements/issues/252) in a future version, we've rewritten our internal implementations to write to Responses asynchronously. 
 
 New Async filters are now available to match existing sync filters. It's very unlikely the classic ASP.NET Framework will ever disable sync writes, but if you're on .NET Core you may want to consider switching to use the newer async API equivalents on [IAppHost](https://github.com/ServiceStack/ServiceStack/blob/master/src/ServiceStack/IAppHost.cs) below: 
 
@@ -946,7 +952,7 @@ New Async filters are now available to match existing sync filters. It's very un
 
 #### Async Attribute Filters
 
-Whilst you can inherit the new `RequestFilterAsyncAttribute` or `ResponseFilterAsyncAttribute` base classes to implement Filter Attributes which call any Async APIs.
+Async Filter Attributes are available by inheriting the new `RequestFilterAsyncAttribute` or `ResponseFilterAsyncAttribute` base classes if you need to call async APIs within Filter Attributes.
 
 All async equivalents follow the same [Order of Operations](/order-of-operations) and are executed immediately after any registered sync filters with the same priority.
 
@@ -956,7 +962,7 @@ As they're not commonly used, the `RequestConverters` and `ResponseConverters` w
 
 #### Async ContentTypes Formats
 
-There's also new async registration APIs for Content-Type Formats which perform Async I/O, most serialization formats don't except for our HTML View Engines which can perform Async I/O when rendering views, so they were changed to use the new `RegisterAsync` APIs:
+There's also new async registration APIs for Content-Type Formats which perform Async I/O, most serialization formats don't except for HTML View Engines which can perform Async I/O when rendering views, so they were changed to use the new `RegisterAsync` APIs:
 
 ```csharp
 appHost.ContentTypes.RegisterAsync(MimeTypes.Html, SerializeToStreamAsync, null);
@@ -970,7 +976,7 @@ The Async implementation of the `HttpWebRequest` based Service Clients was rewri
 
 ### .NET Reflection APIs
 
-One of the primary areas where .NET Standard and .NET Framework source code differed was in Reflection APIs. To work around this we abstracted them behind wrapper extension methods for the most popular Reflection APIs. These wrappers have now all been deprecated as they're no longer needed now that .NET Standard 2.0 added back support of .NET's standard Reflection APIs. 
+One of the primary areas where .NET Standard and .NET Framework source code differed was in Reflection APIs. To work around this the most popular Reflection APIs were abstracted behind wrapper extension methods. These wrappers have now all been deprecated as they're no longer needed now that .NET Standard 2.0 added back support of .NET's standard Reflection APIs. 
 
 ### Minor Features
 
