--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -851,7 +851,7 @@ using (var db = container.Resolve<IDbConnectionFactory>().Open())
 
 ### ServiceStack.Razor
 
-The MVC HTML Helpers for ASP.NET ServiceStack.Razor has been moved to the **ServiceStack.Razor** project. This should be a transparent change it needed ServiceStack.Razor to make use of them.
+The MVC HTML Helpers for ASP.NET ServiceStack.Razor has been moved to the **ServiceStack.Razor** project. This should be a transparent change as it needed ServiceStack.Razor to make use of them.
 
 [Markdown Razor](/markdown-razor) and its `MarkdownFormat` was also moved to ServiceStack.Razor as they were built on older Code DOM technology which isn't available on .NET Core and saw its feature-set stripped down to bare Markdown functionality.
 
